Add some questions and answers
Co-authored-by: Bozhidar Dimov <BADimov21@codingburgas.bg>
Co-authored-by: Gospodin Radev <GSRadev21@codingburgas.bg>

--- a/src/main/main.vcxproj.filters
+++ b/src/main/main.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="questionBank.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="questionBank.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
