--- a/src/main/main.vcxproj
+++ b/src/main/main.vcxproj
@@ -131,6 +131,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="questionBank.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="questionBank.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
