Order functions into seperate files
Co-authored-by: Bozhidar Dimov <BADimov21@codingburgas.bg>
Co-authored-by: Gospodin Radev <GSRadev21@codingburgas.bg>
Co-authored-by: Kristian Gaydov <KKGaydov21@codingburgas.bg>

--- a/src/main/main.vcxproj
+++ b/src/main/main.vcxproj
@@ -130,10 +130,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="questionBank.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="game.h" />
     <ClInclude Include="questionBank.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
