Fix timer, add score, add main menu mechanisms and design
Co-authored-by: Bozhidar Dimov <BADimov21@codingburgas.bg>
Co-authored-by: Gospodin Radev <GSRadev21@codingburgas.bg>
Co-authored-by: Kristian Gaydov <KKGaydov21@codingburgas.bg>

--- a/src/main/main.vcxproj
+++ b/src/main/main.vcxproj
@@ -133,10 +133,12 @@
     <ClCompile Include="game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="questionBank.cpp" />
+    <ClCompile Include="rules.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
     <ClInclude Include="questionBank.h" />
+    <ClInclude Include="rules.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
