--- a/src/main/main.vcxproj.filters
+++ b/src/main/main.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="game.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rules.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="questionBank.h">
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="game.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rules.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
